web-infras/parser/tests/fixtures/esprima/ES6/for-of/invalid-strict-for-of-let/output.txt
[SyntaxError]: unexpect keyword in strict mode (1,25)
1|"use strict"; for (x of let) {}
 |                       ^
